Changes for 3.4.6rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.5

3.4.5rc3 was released as 3.4.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.5rc3

Bug fixes:
.......PS. [ZBX-13225] fixed compilation problem with old curl version for elasticsearch support (abs, wiper)
........S. [ZBX-13208] fixed problem when items might be synced without preprocessing steps if they were created during configuration cache synchronization (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.5rc2

New features:
A.F....... [ZBX-12825] implemented delayed URL validation; enabled user macros containing URLs as valid; made URL validation as optional; improved URL validation (miks)

Bug fixes:
A......... [ZBX-13210] fixed sort param logic for elasticseach (vjaceslavs)
.......PS. [ZBX-13188] fixed possibility of endless loop during unrecoverable database error; fixed incomplete handling of database error (vso)
..F....... [ZBX-13181] fixed database configuration error reporting and message filtering when messages are received from clear_messages function (miks)
..F....... [ZBX-13176] fixed last item value retrieval errors in history manager (vjaceslavs)
..F....... [ZBX-12856] fixed empty host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-13024] fixed parsing "request" parameter for URLs without input parameters (Sasha)
........S. [ZBX-13153] fixed possibility that proxy last access updates are lost during cache reload (vso)
........S. [ZBX-13149] fixed possible crash in history syncer when processing deleted item (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.5rc1

New features:
..F.....S. [ZBXNEXT-4002] implemented support for elasticsearch as history storage (abs, vjaceslavs, wiper)